docs: restructure ADRs to match zstd-java's MADR format
Rewrites all four ADRs and the index to mirror the sibling project's
convention (github.com/dfa1/zstd-java/tree/main/adr): bullet metadata
header (Status/Date/Deciders), Context/Decision/Consequences split
into Positive/Negative/Risks to manage, separate Alternatives
considered and References sections. Adds template.md matching theirs.

0004 (error handling) also firms up from a list of open questions to
a concrete proposed decision (RocksDB.wrapInvokeFailure, AssertionError
for the genuinely-unexpected case) -- matching how their own Proposed
ADRs (e.g. 0010) commit to a specific design rather than leaving it
undecided; Proposed there means "not yet implemented," not "still
being argued over."